name:                achtung
version:             0.1.0.0
synopsis:            Haskell implementation of Curve Fever/Achtung die Kurve
description:         Please see README.md
homepage:            https://github.com/chfi/achtung#readme
license:             MIT
license-file:        LICENSE
author:              Christian Fischer
maintainer:          christian@chfi.se
copyright:           2016 Christian Fischer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable achtung
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
